<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AlaVui</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="tvSettings">Activiy Settings</string>
    
    <string name="navigation_new">Mới</string>
    <string name="navigation_unread">Chưa xem</string>
    <string name="navigation_hot">Hot</string>
    <string name="navigation_old">Cũ</string>
    <string name="navigation_vote">Bình chọn</string>
    <string name="navigation_upload">Đăng ảnh</string>
    <string name="navigation_video">Video</string>
    <string name="navigation_signin">Đăng nhập</string>
    <string name="navigation_setting">Tùy chọn</string>
    <string name="navigation_more">Ứng dụng hay</string>
    <string name="app_id">518406641623410</string>
    <string name="title_login">Login To FaceBook</string>
	<string name="settings">Settings</string>
	<string name="da">ĐĂNG ẢNH</string>
     <string name="dd">ĐĂNG</string>
	<string name="tv_thongbao"> Chào mừng bạn đến với <a href="http://haivl.com/">haivl.com</a>. 
	    						Hãy đặt mật khẩu cho tài khoản của bạn tại đây và chọn cho mình một lên đăng nhập
	    						ưng ý tại đây.</string>
	<string name="tv_time">Hôm qua</string>
	<string name="name_acount">Rồng Con</string>
	<string name="title_picture_upload">ẢNH ĐÃ ĐĂNG</string>
	<string name="ads">Haivl.com là nơi chia sẻ những bức ảnh, 
	    			những câu chuyện hài hước độc đáo và ý 
	    			nghĩa của Việt Nam và thế giới. Rất đơn giản,
	    			chỉ cần vào haivl.com và cười.</string>
	<string name="bt_rate">Đánh giá haivl.com trên Play Store (CH Play)</string>
	<string name="tv_title_option">TÙY CHỌN</string>
	<string name="date_join">"Tham gia từ: "</string>
	<string name="rate">"Thứ hạng: "</string>
	<string name="number_picture_upload">0</string>
	<string name="number_picture_like">0</string>
	<string name="number_picture_comment">0</string>
	<string name="number_picture_view">0</string>
	<string name="profile_page_date_join">0</string>
	<string name="rofile_page_number_rate">0</string>
	<string name="rule1">Bạn được đăng      ảnh/ngày</string>
	<string name="rule2">Số ảnh bạn đã đăng hôm nay: </string>
	<string name="number_image_rule">0</string>
	<string name="number_image_post">0</string>
	<string name="title_of_image">Tiêu đề của ảnh *</string>
	<string name="self_image">Ảnh tự làm</string>
	<string name="Source_of_image">Nguồn của ảnh!</string>
	<string name="chosse_image">Chọn ảnh (Không quá 3MB)</string>
	<string name="upload_image">Đăng ảnh</string> 
</resources>