<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ImageView
        android:id="@id/bi_pictureprofile"
        android:layout_width="100dip"
        android:layout_height="100dip"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/include1"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="37dp"
        android:src="@drawable/abc_ab_solid_light_holo" />

    <TextView
        android:id="@+id/tv_profile_page_name_acount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/bi_pictureprofile"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="14dp"
        android:layout_toRightOf="@id/bi_pictureprofile"
        android:textSize="20sp"
        android:text="@string/name_acount" />

    <TextView
        android:id="@+id/tv_profile_page_time_join"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/tv_profile_page_name_acount"
        android:layout_below="@id/tv_profile_page_name_acount"
        android:text="@string/date_join" />

    <TextView
        android:id="@+id/tv_profile_page_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/tv_profile_page_time_join"
        android:layout_below="@id/tv_profile_page_time_join"
        android:text="@string/rate" />

    <AbsoluteLayout
        android:id="@id/absoluteLayout1"
        android:layout_width="wrap_content"
        android:layout_height="80dip"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/bi_pictureprofile" >

        <TextView
            android:id="@+id/tv_munber_pictute_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="75dp"
            android:layout_y="50dp"
            android:text="@string/number_picture_upload"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/tv_number_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="270dp"
            android:layout_y="47dp"
            android:text="@string/number_picture_view"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/tv_number_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="140dp"
            android:layout_y="50dp"
            android:text="@string/number_picture_like"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/tv_number_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="205dp"
            android:layout_y="49dp"
            android:text="@string/number_picture_comment"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="70dp"
            android:layout_y="25dp"
            android:src="@drawable/profile_photo" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="135dp"
            android:layout_y="25dp"
            android:src="@drawable/profile_like" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="200dp"
            android:layout_y="25dp"
            android:src="@drawable/profile_cm" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="265dp"
            android:layout_y="25dp"
            android:src="@drawable/profile_view" />

    </AbsoluteLayout>

    

    <RelativeLayout
        android:id="@id/RelativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="#10222222"
        android:layout_below="@id/absoluteLayout1" >

        <TextView
            android:id="@+id/tv_profile_page_title_image_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/title_picture_upload"
            android:textSize="25sp"
             />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_profile_page_date_join"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_profile_page_number_rate"
        android:layout_toRightOf="@id/tv_profile_page_time_join"
        android:text="@string/profile_page_date_join" />

    <TextView
        android:id="@+id/tv_profile_page_number_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/tv_profile_page_rate"
        android:layout_alignBottom="@id/tv_profile_page_rate"
        android:layout_toRightOf="@id/tv_profile_page_rate"
        android:text="@string/rofile_page_number_rate" />

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="#fff5f4f4"
        android:src="@drawable/icon_logout" />

</RelativeLayout>